--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Protect Ukraine Now</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<!--
-			manifest.json provides metadata used when your web app is installed on a
-			user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-		-->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<meta property="og:site_name" content="Protect Ukraine Now">
+		<meta property="og:title" content="Protect Ukraine Now">
+		<meta property="og:url" content="https://protectukrainenow.org">
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
+		<meta property="og:image" content="%PUBLIC_URL%/protectukrainenow_social.png">
+		<meta property="og:image:width" content="1500">
+		<meta property="og:image:height" content="843">
+		<meta itemprop="name" content="Protect Ukraine Now">
+		<meta itemprop="url" content="https://protectukrainenow.org">
+		<meta itemprop="description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
+		<meta itemprop="thumbnailUrl" content="%PUBLIC_URL%/protectukrainenow_social.png">
+		<link rel="image_src" href="%PUBLIC_URL%/protectukrainenow_social.png">
+		<meta itemprop="image" content="%PUBLIC_URL%/protectukrainenow_social.png">
+		<meta name="twitter:title" content="Protect Ukraine Now">
+		<meta name="twitter:image" content="%PUBLIC_URL%/protectukrainenow_social.png">
+		<meta name="twitter:url" content="https://protectukrainenow.org">
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
+		<meta name="description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
 		<!--
 			Notice the use of %PUBLIC_URL% in the tags above.
 			It will be replaced with the URL of the `public` folder during the build.
@@ -24,20 +35,22 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-		<title>Protect Ukraine Now</title>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-		<!--
-			This HTML file is a template.
-			If you open it directly in the browser, you will see an empty page.
+		<img src="%PUBLIC_URL%/unsplash-image.jpg"
+			style="position: absolute; top: 0; width: 100%; z-index: -1;"
+		/>
+		<header>
+			<h3>Protect Ukraine Now</h3>
+		</header>
+		<main id="page" class="container" role="main">
+			<h2>The Future of Ukraine</h2>
+			<h1>Depends on You</h1>
+			<noscript>You need to enable JavaScript to run this app.</noscript>
+			<div id="root"></div>
+		</main>
+		<footer>
 
-			You can add webfonts, meta tags, or analytics to this file.
-			The build step will place the bundled scripts into the <body> tag.
-
-			To begin the development, run `npm start` or `yarn start`.
-			To create a production bundle, use `npm run build` or `yarn build`.
-		-->
+		</footer>
 	</body>
 </html>
