--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,305 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>Protect Ukraine Now</title>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta property="og:site_name" content="Protect Ukraine Now">
-		<meta property="og:title" content="Protect Ukraine Now">
-		<meta property="og:url" content="https://protectukrainenow.org">
-		<meta property="og:type" content="website">
-		<meta property="og:description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
-		<meta property="og:image" content="%PUBLIC_URL%/protectukrainenow_social.png">
-		<meta property="og:image:width" content="1500">
-		<meta property="og:image:height" content="843">
-		<meta itemprop="name" content="Protect Ukraine Now">
-		<meta itemprop="url" content="https://protectukrainenow.org">
-		<meta itemprop="description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
-		<meta itemprop="thumbnailUrl" content="%PUBLIC_URL%/protectukrainenow_social.png">
-		<link rel="image_src" href="%PUBLIC_URL%/protectukrainenow_social.png">
-		<meta itemprop="image" content="%PUBLIC_URL%/protectukrainenow_social.png">
-		<meta name="twitter:title" content="Protect Ukraine Now">
-		<meta name="twitter:image" content="%PUBLIC_URL%/protectukrainenow_social.png">
-		<meta name="twitter:url" content="https://protectukrainenow.org">
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
-		<meta name="description" content="Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian civilians from the air and missile attacks. YOU CAN HELP SAVE LIVES!">
-		<!--
-			Notice the use of %PUBLIC_URL% in the tags above.
-			It will be replaced with the URL of the `public` folder during the build.
-			Only files inside the `public` folder can be referenced from the HTML.
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <title>Document</title>
+</head>
+<body>
+<header>
+    <div class="protect_elem">
+        <div>Protect Ukraine</div>
+        <div>NOW</div>
+    </div>
+    <div class="container">
+        <div class="soc_net">
+            <a href="https://twitter.com/protectUKRnow" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/protectukrainenow" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="mailto:protectukrainenow@gmail.com" target="_blank">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+        </div>
+    </div>
+</header>
 
-			Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-			work correctly both with client-side routing and a non-root public URL.
-			Learn how to configure a non-root public URL by running `npm run build`.
-		-->
-	</head>
-	<body>
-		<img src="%PUBLIC_URL%/unsplash-image.jpg"
-			style="position: absolute; top: 0; width: 100%; z-index: -1;"
-		/>
-		<header>
-			<h3>Protect Ukraine Now</h3>
-		</header>
-		<main id="page" class="container" role="main">
-			<h2>The Future of Ukraine</h2>
-			<h1>Depends on You</h1>
-			<noscript>You need to enable JavaScript to run this app.</noscript>
-			<div id="root"></div>
-		</main>
-		<footer>
+<section class="main">
+    <div class="container">
+        <h1>Request your representative to release</h1>
+        <h2>Soviet-made fighter jets to Ukraine</h2>
+        <a href="#sendletter">ACTION NOW</a>
+    </div>
+</section>
 
-		</footer>
-	</body>
+<div class="container">
+    <section class="parts_sec">
+
+        <div class="name">
+            There are 2 ways to get in touch with your representatives:
+        </div>
+        <div class="part part1" id="sendletter">
+            <div class="left_part">
+                <div class="title">
+                    <span>
+                        1
+                    </span>
+                    <span>
+                        Send the letter to your representative
+                    </span>
+                </div>
+                <div class="content">
+                    <p>
+                        How to do that?
+                    </p>
+                    <ul>
+                        <li>1. Find your representative in U.S. Senate follow this link
+                            <a href="https://www.congress.gov/members/find-your-member" target="_blank">www.congress.gov/members/find-your-member</a>
+                        </li>
+                        <li>2. Follow your representative website link</li>
+                        <li>3. Send the email using Contact US form</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="right_part">
+                <div class="video_el"><iframe width="461" height="240" src="https://www.youtube.com/embed/nJZG6xwQ8Pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <p>Quick Help Video</p>
+            </div>
+        </div>
+        <div class="border_block">
+            <span>or</span>
+        </div>
+        <div class="part part2">
+            <div class="left_part">
+                <div class="title">
+                    <span>
+                        2
+                    </span>
+                    <span>
+                       Use chat bot to initiate petition to your representative
+                    </span>
+                </div>
+                <div class="content">
+                    <p>
+                        How to do that?
+                    </p>
+                    <ul>
+                        <li>
+                            <p>1. Click below button if you
+                                use iOS (MacOS) or Android</p>
+                            <a href="https://resist.bot/petitions/PDRQYD" target="_blank">USE CHAT BOT</a>
+                        </li>
+                        <li>
+                            <p>
+                                2. If you have Twitter account you
+                                can request your representative
+                                through chat bot there
+                            </p>
+                            <a href="https://twitter.com/messages/compose?recipient_id=835740314006511618&text=sign%20PDRQYD" target="_blank">USE TWITTER</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="right_part">
+                <div class="video_el"><iframe width="461" height="240" src="https://www.youtube.com/embed/j1Uml7lV_HA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <p>Quick Help Video</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="social_sec">
+
+        <h3>After you are done please share this site with
+            your friends, family and on social networks</h3>
+        <div class="social_buttons">
+            <div class="sharethis-inline-share-buttons"></div>
+        </div>
+        <div class="save_block">
+            <div>Together we can save</div>
+            <div>Ukrainian lives!</div>
+            <div class="flag">
+                <div class="blue"></div>
+                <div class="yellow"></div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="letter_sec">
+
+        <div class="title">
+            Send the following letter to your
+            representative in U.S. Congress
+        </div>
+        <div class="letter_text">
+            <div class="greet">
+                Dear [name of the representative],
+            </div>
+            </br>
+            <div>Today I am urgently asking you to actively support immediate delivery of Eastern European fighter
+                planes to Ukraine.
+                The brave Ukrainian army and the country’s heroic citizens are winning the war on the ground.
+                The problem is that Ukrainian cities are being destroyed and citizens are being murdered from the
+                air.
+                I am requesting your urgent help in convincing the White House that immediate delivery of MIG planes
+                to
+                Ukraine should be the highest priority in support of a free Ukraine.
+                What we are witnessing is a genocide against the Ukrainian people. We have an ability in this
+                country
+                and allied bases in Europe to stop these murderous attacks from the air.
+                We have a moral obligation to do so. Our words are meant to reinforce President Zelenskyy urgent
+                demands
+                for fighter planes.
+                Ukrainian cities are laying in ruins and thousands of civilians are dead and will keep dying because
+                Ukraine is denied fighter jets.
+                <b>These planes are defensive, NOT offensive weapons: they will protect Ukrainian sky from Russian
+                    air
+                    raids.</b></div>
+            </br>
+            <div> There are MiG 29 warplanes sitting at allied bases in Europe, ready for an immediate transfer.
+                Ukrainian pilots are well-trained on these warplanes and can use them to stop these murderous
+                attacks
+                from the air tonight!
+            </div>
+            </br>
+            <div>
+                We can no longer stand back and watch schools, hospitals, homes, apartment buildings, bomb shelters,
+                every day people of all ages being mass murdered on a daily basis.
+                The news that a mother in labor and her unborn baby died after a maternity ward was bombed in
+                Mariupol
+                broke my heart.
+                It is a tragedy that could have been prevented if Ukraine had the planes to defend its sky.
+                I give you my word, I am about to become a single issue voter.
+                My support in any upcoming election will be based on your immediate action to address this gap in
+                Ukraine’s defense.
+                I know, you deal with many requests, but this is an existential need - Ukraine will not survive
+                without
+                your support. Nothing matters more to me at this moment.
+            </div>
+            </br>
+            <div class="bst_wishes">
+                Sincerely,</br>
+                [your name]
+            </div>
+        </div>
+        <div class="copy_btn">
+            COPY TO CLIPBOARD
+        </div>
+
+    </section>
+
+    <section class="theatre_sec">
+        <div>We are very encouraged and grateful for the overwhelming support following Volodymyr Zelenskyy address
+            to
+            U.S. Congress on March 16th.
+        </div>
+        </br>
+        <div><b>But Ukraine has a dire and immediate need that has not yet been addressed - protecting Ukrainian
+            civilians from the air attacks. Ukraine needs fighter planes to protect civilians from the air
+            raids.</b>
+        </div>
+        </br>
+        <div>
+            At the time when Zelenskyy was speaking to Congress, Russian plane dropped a powerful bomb on a theater
+            in
+            the besieged city of Mariupol sheltering over a thousand civilians.
+            It happened because there was not a single Ukrainian fighter jet in the sky over Mariupol which could
+            prevent this horrible tragedy.
+            This is happening all over Ukraine on a daily basis. Fighter planes is the essential thing that can save
+            Ukrainian civilians lives!
+        </div>
+        <div class="theatre_img">
+            <img src="img/mariupol_theatre.png" alt="">
+        </div>
+        <div class="el_with_border">
+            A satellite of the Mariupol theater from Monday, before it was bombed. The word "Children" is written in
+            white on the pavement. Satellite image ©2022 Maxar Technologies
+        </div>
+    </section>
+
+    <section class="news_papers">
+        <ul>
+            <li>
+                <img src="img/WSJ_Zelenskyy.png" alt="">
+                <div class="content">
+                    <div class="title">
+                        WSJ Opinion - Why Not
+                        Victory in Ukraine?
+                    </div>
+                    <div class="text">
+                        <div>
+                            Zelenskyy challenges Biden to do
+                            more to defeat Russia’s invasion.
+                        </div>
+                        </br>
+                        <div>
+                            "The hang-up in providing these seems
+                            to have been U.S. reluctance to provoke
+                            Mr. Putin with certain high-profile weapons,
+                            <b>as with President Biden’s refusal to assist
+                            with the transfer of 28 Polish MiG
+                                fighters to Ukraine.</b>"
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>                
+                <div class="content">
+                    <div class="title">
+                        The Washington Post
+                        Opinion - We can’t let
+                        Putin’s threats deter
+                        us from supplying
+                        Ukrainians with
+                        fighter planes
+                    </div>
+                    <div class="text">
+                        <b>"We shouldn’t let an aggressor veto
+                        aid to his victims. If the Ukrainians
+                        say they want MiG-29’s, we should
+                            provide them."</b>
+                    </div>
+                </div>
+                <img src="img/Washington_Post.png" alt="">
+            </li>
+        </ul>
+    </section>
+
+    <section class="authors">
+        <p></p>
+    </section>
+
+</div>
+
+<footer>
+    <div class="container">
+        <div class="protect_elem">
+            <div>Protect Ukraine</div>
+            <div>NOW</div>
+        </div>
+        <div class="text">
+            We are a brother and sister, who were raised in Kharkiv, Ukraine. We spent the last 30 years in the US,
+            living the American dream, both with successful careers in high tech. We love and admire the US and
+            the principles on which it is built. But now our focus is to help our beautiful Ukraine survive and win.
+        </div>
+        <div class="owners">
+            — Sergey & Galina Lubarsky
+        </div>
+    </div>
+</footer>
+
+<script src="common.js"></script>
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=623222622d10e5001932a789&product=sop" async="async"></script>
+<script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-QQV97F1V5G&amp;l=dataLayer&amp;cx=c"></script>
+</body>
 </html>
