--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <div class="container">
         <h1>Request your representative to release</h1>
         <h2>Soviet-made fighter jets to Ukraine</h2>
-        <a href="#sendletter">ACTION NOW</a>
+        <a href="#sendletter">ACT NOW</a>
     </div>
 </section>
 
@@ -64,7 +64,7 @@
                         How to do that?
                     </p>
                     <ul>
-                        <li>1. Find your representative in U.S. Senate follow this link
+                        <li>1. Find your representative in U.S. Senate following this link
                             <a href="https://www.congress.gov/members/find-your-member" target="_blank">www.congress.gov/members/find-your-member</a>
                         </li>
                         <li>2. Follow your representative website link</li>
