share buttons fixed

--- a/public/index.html
+++ b/public/index.html
@@ -215,5 +215,8 @@ header .soc_net a{
 
 <div id="root"></div>
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&amp;display=swap" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
 </body>
 </html>
