--- a/src/template.html
+++ b/src/template.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title><% preact.title %></title>
+    <title>Protect Ukraine NOW</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- implemented server push instead 
-        <script>
-        // preload main image
-        new Image().src = "img/main.jpg"
-    </script> -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" /> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap" />
     <% preact.headEnd %>
 </head>
 <body>
+    <style>
+        /* inlined because of the image */
+        .main {
+            padding: 210px 0 168px;
+            background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("assets/main.jpg") no-repeat;
+            background-size: cover;
+            text-align: center;
+        }
+    </style>
+    <% preact.bodyEnd %>
 </body>
-<% preact.bodyEnd %>
 </html>
