--- a/src/template.html
+++ b/src/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Protect Ukraine NOW</title>
+    <title>Protect Ukraine now</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +17,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap" />
     <% preact.headEnd %>
 </head>
-<body>
+<body class="body">
+    <style>
+        /* inlined because of the image */
+        .main {
+            padding: 210px 0 168px;
+            background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("assets/main.jpg") no-repeat;
+            background-size: cover;
+            text-align: center;
+        }
+    </style>
     <% preact.bodyEnd %>
 </body>
 </html>
