--- a/src/template.html
+++ b/src/template.html
@@ -5,12 +5,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 	<style>
 		.main {
 			background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("assets/main.webp") no-repeat;
 		}
 	</style>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap" />
+	
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 	<% preact.headEnd %>
 </head>
 <body>
