--- a/src/template.html
+++ b/src/template.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title><% preact.title %></title>
+	<meta name="description" content="Ukrainian cities are being destroyed and civilians are being murdered from the air. Help convince the White House to deliver MIG figter jets to Ukraine. Give Ukraine the damn planes! Together we can save lives">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,12 +13,11 @@
 		}
 	</style>
 	
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 	<% preact.headEnd %>
 </head>
 <body>
 	<% preact.bodyEnd %>
 </body>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </html>
